--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -57,7 +57,13 @@
           <button id="appartements">Appartements</button>
           <button id="hotels-restaurant">Hôtels & restaurants</button>
         </div>
-        <div class="gallery"></div>
+        <div id="gallery"></div>
+        <div id="gallery 2">
+          <img
+            src="http://localhost:5678/images/restaurant-sushisen-londres1651287319271.png"
+            alt=""
+          />
+        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
@@ -81,6 +87,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/scriptcopy.js"></script>
+    <script src="../Backend/script.js"></script>
   </body>
 </html>
