V1Dynamique, script de test

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -58,12 +58,6 @@
           <button id="hotels-restaurant">Hôtels & restaurants</button>
         </div>
         <div id="gallery"></div>
-        <div id="gallery 2">
-          <img
-            src="http://localhost:5678/images/restaurant-sushisen-londres1651287319271.png"
-            alt=""
-          />
-        </div>
       </section>
       <section id="contact">
         <h2>Contact</h2>
@@ -87,6 +81,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/script.js"></script>
+    <script src="../Backend/script2.js"></script>
   </body>
 </html>
