--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -81,6 +81,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/script2.js"></script>
+    <script src="../Backend/script.js"></script>
   </body>
 </html>
