--- a/FrontEnd/index copy.html
+++ b/FrontEnd/index copy.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Admin - Sophie Bluel - Architecte d'intérieur</title>
+    <title>Sophie Bluel - Architecte d'intérieur</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,8 +14,19 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
+    <div id="bandeau">
+      <a href="#" id="modif-gen"><i class="fa-regular fa-pen-to-square"></i></a>
+      <h3>Mode édition</h3>
+      <button id="publier">publier les changements</button>
+    </div>
     <a href="#modal1"></a>
-    <aside id="modal1" class="modal" aria-hidden="true" role="dialog">
+    <aside
+      id="modal1"
+      class="modal"
+      aria-hidden="true"
+      role="dialog"
+      style="display: none"
+    >
       <div class="modal-box"></div>
     </aside>
     <header>
@@ -33,8 +44,14 @@
       <section id="introduction">
         <figure>
           <img src="./assets/images/sophie-bluel.png" alt="" />
+          <a href="#" id="modif-photo"
+            ><i class="fa-regular fa-pen-to-square"> Modifier</i></a
+          >
         </figure>
         <article>
+          <a href="#" id="modif-presentation"
+            ><i class="fa-regular fa-pen-to-square"> Modifier</i></a
+          >
           <h2>Designer d'espace</h2>
           <p>
             Je raconte votre histoire, je valorise vos idées. Je vous accompagne
@@ -54,7 +71,12 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>Mes Projets</h2>
+        <h2>
+          Mes Projets<a href="#" id="modif-portfolio"
+            ><i class="fa-regular fa-pen-to-square"> Modifier</i></a
+          >
+        </h2>
+
         <div class="filtre">
           <button id="tous">Tous</button>
           <button id="objets">Objets</button>
@@ -85,6 +107,11 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/indexAdmin.js"></script>
+    <script
+      src="https://kit.fontawesome.com/1100e2f259.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../Backend/modal.js"></script>
+    <script src="../Backend/script.js"></script>
   </body>
 </html>
