Login ok, connexion pas ok. Preparation modal bandeau en js ok

--- a/FrontEnd/indexModal.html
+++ b/FrontEnd/indexModal.html
@@ -14,8 +14,15 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
+    <div id="bandeau-publication"></div>
     <a href="#modal1"></a>
-    <aside id="modal1" class="modal" aria-hidden="true" role="dialog">
+    <aside
+      id="modal1"
+      class="modal"
+      aria-hidden="true"
+      role="dialog"
+      style="display: none"
+    >
       <div class="modal-box"></div>
     </aside>
     <header>
@@ -85,6 +92,10 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/indexAdmin.js"></script>
+    <script
+      src="https://kit.fontawesome.com/1100e2f259.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../Backend/modal.js"></script>
   </body>
 </html>
