--- a/FrontEnd/indexCopy.html
+++ b/FrontEnd/indexCopy.html
@@ -30,7 +30,7 @@
       <div class="modal-box"></div>
     </aside>
     <header>
-      <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul>
           <a href="./index.html#projets"><li>projets</li></a>
@@ -111,7 +111,8 @@
       src="https://kit.fontawesome.com/1100e2f259.js"
       crossorigin="anonymous"
     ></script>
-    <script src="../Backend/modal.js"></script>
+    <!-- <script src="../Backend/modal.js"></script> -->
     <script src="../Backend/script.js"></script>
+    <script src="../Backend/indexAdmin.js"></script>
   </body>
 </html>
