Modale 1 et2 fait, bouton ajouter photo->vers modale 2 et fermer par croix et retour arriere ok.

--- a/FrontEnd/indexCopy.html
+++ b/FrontEnd/indexCopy.html
@@ -20,13 +20,7 @@
       <button id="publier">publier les changements</button>
     </div>
     <a href="#modal1"></a>
-    <aside
-      id="modal1"
-      class="modal"
-      aria-hidden="true"
-      role="dialog"
-      style="display: none"
-    >
+    <aside id="modal1" class="modal" aria-hidden="true" role="dialog">
       <div class="modal-box"></div>
     </aside>
     <header>
@@ -71,11 +65,13 @@
         </article>
       </section>
       <section id="portfolio">
-        <h2>
-          Mes Projets<a href="#" id="modif-portfolio"
-            ><i class="fa-regular fa-pen-to-square"> Modifier</i></a
-          >
-        </h2>
+        <div class="Projet">
+          <h2>
+            Mes Projets<a href="#" id="modif-portfolio"
+              ><i class="fa-regular fa-pen-to-square"> Modifier</i></a
+            >
+          </h2>
+        </div>
 
         <div class="filtre">
           <button id="tous">Tous</button>
