V1 projet fini ( dernier ajustement a faire)

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -88,8 +88,7 @@
       src="https://kit.fontawesome.com/1100e2f259.js"
       crossorigin="anonymous"
     ></script>
-    <script src="../Backend/Test.js"></script>
-    <!-- <script src="../Backend/modal.js"></script> -->
+    <script src="../Backend/modal.js"></script>
     <script src="../Backend/Modalfunction.js"></script>
     <script src="../Backend/script.js"></script>
   </body>
