--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="bandeau-publication"></div>
     <header>
-      <h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+      <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
         <ul id="navUl">
           <a href="./index.html#projets"><li>projets</li></a>
