V1 Modification fichier Backend vers frontend

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -48,6 +48,6 @@
         </ul>
       </nav>
     </footer>
-    <script src="../Backend/login.js" crossorigin="anonymous"></script>
+    <script src="../FrontEnd/login.js" crossorigin="anonymous"></script>
   </body>
 </html>
