--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -88,7 +88,7 @@
       src="https://kit.fontawesome.com/1100e2f259.js"
       crossorigin="anonymous"
     ></script>
-    <script src="../Backend/modal.js"></script>
-    <script src="../Backend/script.js"></script>
+    <script src="../FrontEnd/modal.js"></script>
+    <script src="../FrontEnd/script.js"></script>
   </body>
 </html>
